--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
+<script src="main.js"></script>
+<style>
+    .output-div{
+        background: coral;
+        margin-top: 10px;
+    }
+    .product-card{
+        display: flex;
+        margin-top: 30px;
+        justify-content: space-evenly;
+        align-items:center ;
+    }
+    .product-title{
+        border: 3px solid coral;
+        border-radius: 10px;
+        padding: 10px;
+
+    }
+    .product-img{
+        width: 150px;
+        height: 150px;
+    }
+</style>
 <body>
-$END$
+
 </body>
 </html>
